[package]
name = "cloudinary"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0"
itertools = "^0"
mime = "^0"
paste = "^1"
reqwest = { version = "^0", features=[ "json", "multipart", "stream" ]}
serde = { version  = "^1", features = [ "derive" ] }
serde_json = "^1"
sha1 = "^0"
tokio = { version = "^1", features = [ "full" ] }
tokio-util = "^0"
url = { version = "^2", default-features = false }
